--- a/Semana 3/Modismos-Ruby.ipynb
+++ b/Semana 3/Modismos-Ruby.ipynb
@@ -46,10 +46,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "40844d6b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NoMethodError",
+     "evalue": "undefined method `nombre' for #<#<Class:0x000001611aa2e898>::Persona:0x000001611a8c4b10 @nombre=\"Joe\">",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31mNoMethodError\u001b[0m: undefined method `nombre' for #<#<Class:0x000001611aa2e898>::Persona:0x000001611a8c4b10 @nombre=\"Joe\">",
+      "(irb):6:in `<top (required)>'"
+     ]
+    }
+   ],
    "source": [
     "class Persona\n",
     "  def initialize(nombre)\n",
@@ -71,12 +81,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "94f220a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Nayperlamp\""
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Completa"
+    "class Persona\n",
+    "  def initialize(nombre)\n",
+    "    @nombre = nombre\n",
+    "  end\n",
+    "  \n",
+    "  def nombre\n",
+    "    @nombre\n",
+    "  end\n",
+    "end\n",
+    "\n",
+    "Persona.new(\"Nayperlamp\").nombre"
    ]
   },
   {
@@ -93,13 +124,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "35b58ee5",
+   "execution_count": 28,
+   "id": "f740b424",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"Angello tiene 19 years\"\n",
+      "\"Kurisu tiene 24 years\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"Kurisu tiene 24 years\""
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class Persona\n",
-    "  attr_reader :nombre :edad\n",
+    "  attr_reader :nombre, :edad\n",
     "\n",
     "  def initialize(nombre, edad)\n",
     "    @nombre = nombre\n",
@@ -107,7 +157,7 @@
     "  end\n",
     "\n",
     "  def descripcion\n",
-    "    nombre + \" tiene \" + edad.to_s + \"years \"\n",
+    "    p nombre + \" tiene \" + edad.to_s + \" years\"\n",
     "  end\n",
     "end\n",
     "\n",
@@ -125,7 +175,11 @@
     "  end\n",
     "end\n",
     "\n",
-    "# Completa\n"
+    "angello = Hijo.new(\"Angello\", 19, \"Comer\")\n",
+    "angello.descripcion\n",
+    "\n",
+    "kurisu = Padre.new(\"Kurisu\", 24, \"Cientifico\")\n",
+    "kurisu.descripcion"
    ]
   },
   {
@@ -142,10 +196,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "74af0644",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ArgumentError",
+     "evalue": "wrong number of arguments (given 1, expected 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31mArgumentError\u001b[0m: wrong number of arguments (given 1, expected 3)",
+      "(irb):14:in `initialize'",
+      "(irb):19:in `new'",
+      "(irb):19:in `<top (required)>'"
+     ]
+    }
+   ],
    "source": [
     "class Persona\n",
     "  def initialize(nombre)\n",
@@ -166,7 +232,10 @@
     "  end\n",
     "end\n",
     "\n",
-    "# Completa"
+    "maria = Hijo.new(\"Maria\")\n",
+    "nayperlamp = Padre.new(\"Nayperlamp\")\n",
+    "\n",
+    "[maria, nayperlamp].each(&:mi_nombre)"
    ]
   },
   {
@@ -199,14 +268,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "64c55230",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "(irb):1: syntax error, unexpected `self', expecting ')'\n  def hablar(self)\n             ^~~~\n(irb):4: syntax error, unexpected `end'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31mSyntaxError\u001b[0m: (irb):1: syntax error, unexpected `self', expecting ')'\n  def hablar(self)\n             ^~~~\n(irb):4: syntax error, unexpected `end'"
+     ]
+    }
+   ],
    "source": [
     "class Animal:\n",
-    "    def hablar(self):\n",
-    "        pass"
+    "  def hablar(self):\n",
+    "     pass\n",
+    "  end\n",
+    "end"
    ]
   },
   {
@@ -252,7 +332,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Completa"
+    "animales = [Perro(), Gato(), Vaca()]\n",
+    "for animal in animales:\n",
+    "  animal.hablar()"
    ]
   },
   {
@@ -348,13 +430,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "d82b9bc9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "website = \"rubyPythonJava.com\" # `website` se refiere a string\n",
-    "website = True             # `website` se refiero ahora a Booleano "
+    "website = \"rubyPythonJava.com\" # website se refiere a string\n",
+    "website = true             # website se refiero ahora a Booleano "
    ]
   },
   {
@@ -374,10 +467,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "9b28c5cd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"1\", \"2\", \"3\"]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = [1, 2, 3]\n",
     "a.map(&:to_s) # => ['1', '2', '3']"
@@ -398,10 +502,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "acf27dd6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       ":saludo"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class Amigo\n",
     "  def nombre\n",
@@ -432,10 +547,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "0870f355",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pato grazna\n",
+      "Ganso grazna\n",
+      "Pato nada\n",
+      "Ganso nada\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[#<#<Class:0x000001611aa2e898>::Pato:0x000001611b681e10>, #<#<Class:0x000001611aa2e898>::Ganso:0x000001611b681dc0>]"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class Pato\n",
     "  def graznar\n",
@@ -464,17 +600,16 @@
     "    @pajaros.push(pato)  \n",
     "    @pajaros.push(ganso)\n",
     "  end\n",
-    "def graznar \n",
-    "  pajaros.each do | pajaro |    \n",
-    "    pajaro.graznar  \n",
-    "  end\n",
-    "end\n",
-    "def nadar  \n",
-    "  pajaros.each do | pajaro |   \n",
-    "    pajaro.nadar  \n",
+    "  def graznar \n",
+    "    pajaros.each do | pajaro |    \n",
+    "      pajaro.graznar\n",
     "    end\n",
-    "end\n",
-    "\n",
+    "  end\n",
+    "  def nadar  \n",
+    "    pajaros.each do | pajaro |   \n",
+    "      pajaro.nadar  \n",
+    "    end\n",
+    "  end\n",
     "end\n",
     "accion = AccionesPajaros.new()\n",
     "accion.graznar\n",
