--- a/Semana 3/Modismos-Ruby.ipynb
+++ b/Semana 3/Modismos-Ruby.ipynb
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "f740b424",
+   "id": "796d2ab3",
    "metadata": {},
    "outputs": [
     {
@@ -656,12 +656,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "7a0c82db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Completa"
+    "[1, 2 , 3].each {|n| puts n}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "6626bcc1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[1, 2 ,3].each do |n|\n",
+    "  puts n\n",
+    "end"
    ]
   },
   {
@@ -690,20 +742,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "04c26235",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"block!\"\n",
+      "\"block!\"\n",
+      "\"block!\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"f1 bar baz\""
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"f1 bar baz\".split { p \"block!\" }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "ea062c2c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       ":each"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def each\n",
     "  return to_enum(:each) unless block_given?\n",
@@ -727,6 +810,136 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "b399ec76",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "39\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mi_edad \n",
+    "  puts 39\n",
+    "end\n",
+    "\n",
+    "mi_edad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "2ef8c449",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mi_edad(edad)\n",
+    "  puts edad\n",
+    "end\n",
+    "mi_edad(19)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "9465ee41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "239\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mi_edad\n",
+    "  if block_given?\n",
+    "    yield \n",
+    "  else\n",
+    "     puts \"no hay edad\"\n",
+    "  end\n",
+    "end\n",
+    "\n",
+    "mi_edad{puts \"239\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "f311c21e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NoMethodError",
+     "evalue": "undefined method `propio_each' for [1, 2, 3]:Array",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31mNoMethodError\u001b[0m: undefined method `propio_each' for [1, 2, 3]:Array",
+      "(irb):7:in `<top (required)>'"
+     ]
+    }
+   ],
+   "source": [
+    "class Array \n",
+    "  def propio_each\n",
+    "    for i in self\n",
+    "      yield i\n",
+    "    end\n",
+    "  end\n",
+    "end\n",
+    "[1, 2, 3].propio_each{|n| puts n*2}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "6f1122f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NoMethodError",
+     "evalue": "undefined method `propio_each' for [1, 2, 3]:Array",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31mNoMethodError\u001b[0m: undefined method `propio_each' for [1, 2, 3]:Array",
+      "(irb):in `<top (required)>'"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46d296d0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1134ef06",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "a66d69df",
    "metadata": {},
@@ -740,10 +953,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "ca3b5520",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       ":each_explicit"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def each_explicit(&block)\n",
     "  return to_enum(:each) unless block\n",
@@ -776,10 +1000,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "id": "60de0563",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "#<Proc:0x000001611a99fbc0 (irb):0>"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "proc = Proc.new { |n| puts \"#{n}!\" }"
    ]
@@ -794,10 +1029,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "e90c47d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "#<Proc:0x000001611a928138 (irb):3>"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def correr_proc_numeros_aleatorios(proc)\n",
     "  proc.call(random)\n",
@@ -816,10 +1062,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "cf715891",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       ":correr_proc_numeros_aleatorios"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def correr_proc_numeros_aleatorios(&proc)\n",
     "  proc.call(random)\n",
@@ -849,10 +1106,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "4a7a91c7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"1\", \"2\", \"3\"]"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "[1,2,3].map(&:to_s)\n",
     "[1,2,3].map {|i| i.to_s }\n",
@@ -869,10 +1137,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "id": "ce94bb49",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       ":to_proc"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class Symbol\n",
     "  def to_proc\n",
@@ -921,15 +1200,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "1cbb63e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def return_desde_proc\n",
     "  a = Proc.new { return 10 }.call\n",
     "  puts \"Esto no deberia ser impreso.\"\n",
-    "end"
+    "end\n",
+    "return_desde_proc"
    ]
   },
   {
@@ -942,10 +1233,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "id": "3b4aa173",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La lambda  retorna  10 y debe ser impreso.\n"
+     ]
+    }
+   ],
    "source": [
     "def return_desde_lambda\n",
     "  a = lambda { return 10 }.call\n",
@@ -994,15 +1293,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "id": "d828dae7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       ":trivial_method"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def trivial_method    # sin argumentps; se puede usar trivial_method()\n",
     "  x = 5\n",
     "end\n",
-    "#trivial_method"
+    "# trivial_method"
    ]
   },
   {
@@ -1032,6 +1342,75 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "7f75b081",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CC3S2 podria ser el mejor curso para los estudiantes\n"
+     ]
+    }
+   ],
+   "source": [
+    "puts \"CC3S2 podria ser el mejor curso para los estudiantes\";"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "e3fa1514",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CC3S2 podria ser el mejor curso para los estudiantes\n"
+     ]
+    }
+   ],
+   "source": [
+    "puts \"CC3S2 podria ser el mejor curso para los estudiantes\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "670b519e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def metodo1\n",
+    "  suma = 3 + 4\n",
+    "  return suma\n",
+    "end\n",
+    "\n",
+    "def metodo2\n",
+    "  3 + 4\n",
+    "end\n",
+    "\n",
+    "metodo1\n",
+    "# metodo2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "a6db1f93",
    "metadata": {},
@@ -1045,10 +1424,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "id": "2d0db661",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "undefined local variable or method `do_fancy_stuff' for #<Object:0x0000016119ed11f8>",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31mNameError\u001b[0m: undefined local variable or method `do_fancy_stuff' for #<Object:0x0000016119ed11f8>",
+      "(irb):2:in `metodo1'",
+      "(irb):5:in `<top (required)>'"
+     ]
+    }
+   ],
    "source": [
     "# \n",
     "def metodo1(required_arg, args={})\n",
