--- a/Semana 3/Modismos-Ruby.ipynb
+++ b/Semana 3/Modismos-Ruby.ipynb
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "796d2ab3",
+   "id": "ba37d006",
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "6626bcc1",
+   "id": "168650a7",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "b399ec76",
+   "id": "a3e0de40",
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "2ef8c449",
+   "id": "bebe2950",
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +855,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "9465ee41",
+   "id": "12e18e36",
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "f311c21e",
+   "id": "93584d5c",
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "6f1122f8",
+   "id": "2fc26e51",
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46d296d0",
+   "id": "6eed19c8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -934,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1134ef06",
+   "id": "af487f39",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1344,7 +1344,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "7f75b081",
+   "id": "4d5ec761",
    "metadata": {},
    "outputs": [
     {
@@ -1362,7 +1362,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "e3fa1514",
+   "id": "fe730027",
    "metadata": {
     "scrolled": true
    },
@@ -1382,7 +1382,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "670b519e",
+   "id": "cf4b2f4e",
    "metadata": {},
    "outputs": [
     {
@@ -1621,7 +1621,10 @@
    "outputs": [],
    "source": [
     "class Superhero\n",
-    " # completa"
+    " def heroe1(super_chch)\n",
+    "   puts \"Hey estudia cp, sino palo #{super_chch}!\"\n",
+    " end\n",
+    "end\n"
    ]
   },
   {
