--- a/Semana 3/Metaprogramacion.ipynb
+++ b/Semana 3/Metaprogramacion.ipynb
@@ -72,10 +72,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a31d1214",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "#<Class:0x0000020d2ce908c8>::Padre"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class Padre\n",
     "end\n",
