--- a/Semana 3/Modismos-Ruby.ipynb
+++ b/Semana 3/Modismos-Ruby.ipynb
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "ba37d006",
+   "id": "a0b5ab9d",
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "168650a7",
+   "id": "29f73590",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "a3e0de40",
+   "id": "e3ce341f",
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "bebe2950",
+   "id": "acf666e4",
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +855,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "12e18e36",
+   "id": "1e8aa3c9",
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "93584d5c",
+   "id": "162460ae",
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "2fc26e51",
+   "id": "2559a0ba",
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +926,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6eed19c8",
+   "id": "c16c4859",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -934,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af487f39",
+   "id": "7cea732c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1344,7 +1344,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "4d5ec761",
+   "id": "acf55a2b",
    "metadata": {},
    "outputs": [
     {
@@ -1362,7 +1362,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "fe730027",
+   "id": "194b082c",
    "metadata": {
     "scrolled": true
    },
@@ -1382,7 +1382,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "cf4b2f4e",
+   "id": "4bb93977",
    "metadata": {},
    "outputs": [
     {
@@ -1622,8 +1622,8 @@
    "source": [
     "class Superhero\n",
     " def heroe1(super_chch)\n",
-    "   puts \"Hey estudia cp, sino palo #{super_chch}!\"\n",
-    " end\n",
+    "   puts \"Hey estudia cp, sino, hay tabla #{super_chch}! \"\n",
+    " endxddd\n",
     "end\n"
    ]
   },
