--- a/Semana 3/Metaprogramacion.ipynb
+++ b/Semana 3/Metaprogramacion.ipynb
@@ -24,8 +24,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hola a  #<#<Class:0x0000020d2ce908c8>::Padre:0x0000020d2d4e8900>\n",
-      "Hola a  #<#<Class:0x0000020d2ce908c8>::Hijo:0x0000020d2d4e7b90>\n"
+      "Hola a  #<#<Class:0x0000015d27b501f0>::Padre:0x0000015d28145510>\n",
+      "Hola a  #<#<Class:0x0000015d27b501f0>::Hijo:0x0000015d281447a0>\n"
      ]
     }
    ],
