--- a/Semana 3/Metaprogramacion.ipynb
+++ b/Semana 3/Metaprogramacion.ipynb
@@ -24,8 +24,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hola a  #<#<Class:0x0000015d27b501f0>::Padre:0x0000015d28145510>\n",
-      "Hola a  #<#<Class:0x0000015d27b501f0>::Hijo:0x0000015d281447a0>\n"
+      "Hola a  #<#<Class:0x000002930f2ef3c0>::Padre:0x000002930f8d5500>\n",
+      "Hola a  #<#<Class:0x000002930f2ef3c0>::Hijo:0x000002930f8d47b8>\n"
      ]
     }
    ],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "9a1634d5",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
        "Object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,10 +137,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "eb603ddd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BasicObject"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Object.superclass"
    ]
@@ -155,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "16c7c725",
    "metadata": {},
    "outputs": [],
@@ -173,10 +184,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "id": "bca58ba2",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "undefined local variable or method `superclass' for #<Object:0x000002930e9e99b0>",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31mNameError\u001b[0m: undefined local variable or method `superclass' for #<Object:0x000002930e9e99b0>",
+      "(irb):in `<top (required)>'"
+     ]
+    }
+   ],
+   "source": [
+    "to_s(superclass)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "9caef683",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#<#<Class:0x000002930f2ef3c0>::Persona:0x000002930f94ea40>\n"
+     ]
+    }
+   ],
    "source": [
     "class Persona\n",
     "  def initialize(nombre)\n",
@@ -197,12 +236,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b148e267",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Persona llamada Angello\n"
+     ]
+    }
+   ],
    "source": [
-    "## Completa"
+    "class Persona\n",
+    "    def initialize(nombre)\n",
+    "        @nombre = nombre\n",
+    "    end\n",
+    "\n",
+    "    def to_s\n",
+    "        \"Persona llamada #{@nombre}\"\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "p = Persona.new(\"Angello\")\n",
+    "puts p"
    ]
   },
   {
