--- a/Semana 3/Metaprogramacion.ipynb
+++ b/Semana 3/Metaprogramacion.ipynb
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "b148e267",
    "metadata": {},
    "outputs": [
@@ -246,6 +246,16 @@
      "text": [
       "Persona llamada Angello\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"Persona llamada Angello\""
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -260,7 +270,8 @@
     "end\n",
     "\n",
     "p = Persona.new(\"Angello\")\n",
-    "puts p"
+    "puts p\n",
+    "p.to_s"
    ]
   },
   {
@@ -276,13 +287,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "232a7a33",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       ":cadena_estados"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def cadena_estados(tarea)\n",
-    "  case tares.status\n",
+    "  case tarea.status\n",
     "  when \"realizado\" then \"Lo he realizado\"\n",
     "  when \"iniciado\" then \"no lo he realizado\"\n",
     "  when \"no iniciado\" then \"ni siquiera he empezado\"\n",
@@ -302,12 +324,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "56a11dc2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lo he realizado\n"
+     ]
+    }
+   ],
    "source": [
-    "## Completa"
+    "class Status\n",
+    "  def self.for(status_string)\n",
+    "    case status_string # status.for(tarea.status).cadena_estados\n",
+    "    when \"realizado\" then DoneStatus.new\n",
+    "    when \"iniciado\" then StarterStatus.new\n",
+    "    when \"no iniciado\" then DefinedStatus.new\n",
+    "    end\n",
+    "  end\n",
+    "\n",
+    "  def done? = false\n",
+    "  def cadena_estados = raise NotImplementedError\n",
+    "end\n",
+    "\n",
+    "class DoneStatus < Status\n",
+    "  def to_s = \"Lo he realizado\"\n",
+    "  def done? = true\n",
+    "  def cadena_estados = \"Yo soy yo\"\n",
+    "end\n",
+    "\n",
+    "class StarterStatus < Status\n",
+    "  def to_s = \"no lo he realizado\"\n",
+    "  def done? = true\n",
+    "  def cadena_estados = \"Yo soy yo\"\n",
+    "end\n",
+    "\n",
+    "class DefinedStatus < Status\n",
+    "  def to_s = \"ni siquiera he empezado\"\n",
+    "  def done? = true\n",
+    "  def cadena_estados = \"Yo soy yo\"\n",
+    "end\n",
+    "\n",
+    "class Status\n",
+    "  def self.for(status_string)\n",
+    "    case status_string # status.for(tarea.status).cadena_estados\n",
+    "    when \"realizado\" then DoneStatus.new\n",
+    "    when \"iniciado\" then StarterStatus.new\n",
+    "    when \"no iniciado\" then DefinedStatus.new\n",
+    "    end\n",
+    "  end\n",
+    "\n",
+    "  def done? = false\n",
+    "  def cadena_estados = raise NotImplementedError\n",
+    "end\n",
+    "\n",
+    "class DoneStatus < Status\n",
+    "  def to_s = \"lo he realizado\"\n",
+    "  def done? = true\n",
+    "  def cadena_estados = \"Yo soy yo\"\n",
+    "end\n",
+    "\n",
+    "class StarterStatus < Status\n",
+    "  def to_s = \"no lo he realizado\"\n",
+    "  def done? = true\n",
+    "  def cadena_estados = \"Yo soy yo\"\n",
+    "end\n",
+    "\n",
+    "class DefinedStatus < Status\n",
+    "  def to_s = \"ni siquiera he empezado\"\n",
+    "  def done? = true\n",
+    "  def cadena_estados = \"Yo soy yo\"\n",
+    "end\n",
+    "\n",
+    "tarea_realizada = Status.for(\"realizado\")\n",
+    "puts tarea_realizada\n"
    ]
   },
   {
