--- a/Semana 3/Metaprogramacion.ipynb
+++ b/Semana 3/Metaprogramacion.ipynb
@@ -433,10 +433,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "ed240d98",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       ":cos"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "module Trig\n",
     "  PI = 3.141592654\n",
@@ -444,6 +455,8 @@
     "    # ..\n",
     "  end\n",
     "  def self.cos(x)\n",
+    "\n",
+    "    \n",
     "    # ..\n",
     "  end\n",
     "end"
@@ -451,10 +464,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "3ade22e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       ":pecado"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "module Moral\n",
     "  MUY_MALO= 0\n",
@@ -529,10 +553,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "11a9ae39",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"#<Class:0x000002930f2ef3c0>::Fonografo (id: 1760): West End Blues\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"#<Class:0x000002930f2ef3c0>::Fonografo (id: 1760): West End Blues\""
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "module Debug\n",
     "  def quien_soy?\n",
@@ -609,10 +651,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "0d65e8bc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "(irb):21: syntax error, unexpected instance variable\n  puts \"nombre #{p1.@name}\"\n                    ^~~~~\n(irb):21: syntax error, unexpected end-of-input\n  puts \"nombre #{p1.@name}\"\n                           ^\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31mSyntaxError\u001b[0m: (irb):21: syntax error, unexpected instance variable\n  puts \"nombre #{p1.@name}\"\n                    ^~~~~\n(irb):21: syntax error, unexpected end-of-input\n  puts \"nombre #{p1.@name}\"\n                           ^\n"
+     ]
+    }
+   ],
    "source": [
     "class Person\n",
     "  include Comparable\n",
@@ -632,7 +683,10 @@
     "p1 = Persona.new(\"M\")\n",
     "p2 = Persona.new(\"G\")\n",
     "p3 = Persona.new(\"L\")\n",
-    "# Completa"
+    "# Completa\n",
+    "\n",
+    "# if p1 > p2\n",
+    "#   puts \"nombre #{p1.name}\"\n"
    ]
   },
   {
