--- a/Semana 2/Fundamentos-Ruby.ipynb
+++ b/Semana 2/Fundamentos-Ruby.ipynb
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "id": "c5b04bee",
    "metadata": {},
    "outputs": [
@@ -617,7 +617,7 @@
        "14"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,13 +666,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "b91ee170",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#<MatchData \"18:25 PM\">\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "#<MatchData \"18:25 PM\">"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x = \"8:25 PM\"\n",
-    "x = /^\\d\\d?:\\d\\d\\s*[ap]m$/i"
+    "x = /\\d\\d?:\\d\\d\\s*[ap]m$/i\n",
+    "p \"Son las 18:25 PM\".match x"
    ]
   },
   {
@@ -687,10 +706,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "7d382928",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x = \"8:25 PM\"\n",
     "x =~  /(\\d\\d?):(\\d\\d)\\s*([ap])m$/i"
@@ -710,10 +740,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "5850c3d3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"Catch 22\" =~ /\\w+\\s+\\d+/\n",
     "/\\w+\\s+\\d+/ =~ \"Catch 22\""
@@ -762,8 +803,8 @@
    ],
    "source": [
     "class Being\n",
-    "\n",
-    "    @@is = true"
+    "    @@is = true\n",
+    "end"
    ]
   },
   {
