--- a/Semana 2/Fundamentos-Ruby/Actividad.ipynb
+++ b/Semana 2/Fundamentos-Ruby/Actividad.ipynb
@@ -49,12 +49,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "539587b5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "(irb): syntax error, unexpected string literal, expecting `do' or '{' or '('\n$rspec -e '#sum ' spec/parte1_spec.rb`\n          ^\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31mSyntaxError\u001b[0m: (irb): syntax error, unexpected string literal, expecting `do' or '{' or '('\n$rspec -e '#sum ' spec/parte1_spec.rb`\n          ^\n"
+     ]
+    }
+   ],
    "source": [
-    "$rspec -e '#sum ' spec/parte1_spec.rb`"
+    "$rspec -e '#sum' spec/parte1_spec.rb"
    ]
   },
   {
@@ -290,7 +299,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Ruby 3.0.2",
+   "display_name": "Ruby 3.2.2",
    "language": "ruby",
    "name": "ruby"
   },
@@ -298,7 +307,7 @@
    "file_extension": ".rb",
    "mimetype": "application/x-ruby",
    "name": "ruby",
-   "version": "3.0.2"
+   "version": "3.2.2"
   }
  },
  "nbformat": 4,
