--- a/Semana 3/Metaprogramacion.ipynb
+++ b/Semana 3/Metaprogramacion.ipynb
@@ -553,24 +553,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "id": "11a9ae39",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\"#<Class:0x000002930f2ef3c0>::Fonografo (id: 1760): West End Blues\"\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "\"#<Class:0x000002930f2ef3c0>::Fonografo (id: 1760): West End Blues\""
+       "\"#<Class:0x000001cc475d1230>::Fonografo (id: 1740): West End Blues\""
       ]
      },
-     "execution_count": 34,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,10 +769,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3835772f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "99\n"
+     ]
+    }
+   ],
    "source": [
     "class Test\n",
     "  def one\n",
@@ -827,10 +828,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a62782d8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Antes de la deficion de clase\n",
+      "self = #<Object:0x000001cc46ce18c8>\n",
+      "En la definicion de clase\n",
+      "self = #<Class:0x000001cc475d1230>::Test\n",
+      "Clase de self = Class\n",
+      "Despues de la deficion de clase\n",
+      "self = #<Object:0x000001cc46ce18c8>\n"
+     ]
+    }
+   ],
    "source": [
     "puts \"Antes de la deficion de clase\"\n",
     "puts \"self = #{self}\\n\"\n",
@@ -853,10 +868,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7a8381b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "99"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class Test\n",
     "  @var = 99\n",
@@ -889,10 +915,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a6892420",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CAT\n"
+     ]
+    }
+   ],
    "source": [
     "animal = \"cat\"\n",
     "puts animal.upcase"
@@ -942,10 +976,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4bbe359b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El cat dice miaow\n",
+      "CAT\n"
+     ]
+    }
+   ],
    "source": [
     "animal = \"cat\"\n",
     "def animal.speak\n",
