--- a/Semana 3/Modismos-Ruby.ipynb
+++ b/Semana 3/Modismos-Ruby.ipynb
@@ -30,10 +30,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b0e39eed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Damian Wayne\n"
+     ]
+    }
+   ],
    "source": [
     "class Batman\n",
     "  def quien_es_robin\n",
@@ -43,7 +51,7 @@
     "    puts \"Damian Wayne\"\n",
     "  end\n",
     "end\n",
-    "#Batman.new.quien_es_robin"
+    "Batman.new.quien_es_robin"
    ]
   },
   {
@@ -83,19 +91,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b8f7990f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"Bart, Coltrane, Roach.\"\n",
+      "\"Bart, Elwood, Roach.\"\n",
+      "\"Bart, Elwood, Linus.\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"Bart, Elwood, Linus.\""
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def cool_dude(arg1=\"Miles\", arg2=\"Coltrane\", arg3=\"Roach\")\n",
     "  \"#{arg1}, #{arg2}, #{arg3}.\"\n",
     "end\n",
     "\n",
     "cool_dude\n",
-    "cool_dude(\"Bart\")\n",
-    "cool_dude(\"Bart\", \"Elwood\")\n",
-    "cool_dude(\"Bart\", \"Elwood\", \"Linus\")"
+    "p cool_dude(\"Bart\")\n",
+    "p cool_dude(\"Bart\", \"Elwood\")\n",
+    "p cool_dude(\"Bart\", \"Elwood\", \"Linus\")"
    ]
   },
   {
@@ -108,18 +136,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "5dcebc99",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"[[[[elephant]]]]\"\n",
+      "\"[fox]\"\n",
+      "\"[[[[[[[[[[fox]]]]]]]]]]\"\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"[[[[[[[[[[fox]]]]]]]]]]\""
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def surround(palabra, pad_width=palabra.length/2)\n",
     "    \"[\" * pad_width + palabra + \"]\" * pad_width\n",
     "end\n",
     "\n",
-    "surround(\"elephant\") \n",
-    "surround(\"fox\")\n",
-    "surround(\"fox\", 10)"
+    "p surround(\"elephant\") \n",
+    "p surround(\"fox\")\n",
+    "p surround(\"fox\", 10)"
    ]
   },
   {
@@ -1758,7 +1806,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Ruby 3.0.2",
+   "display_name": "Ruby 3.2.2",
    "language": "ruby",
    "name": "ruby"
   },
@@ -1766,7 +1814,7 @@
    "file_extension": ".rb",
    "mimetype": "application/x-ruby",
    "name": "ruby",
-   "version": "3.0.2"
+   "version": "3.2.2"
   }
  },
  "nbformat": 4,
